// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-user-group should delete a user group 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`delete-user-group should handle non-existent user group 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The user group could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;
